2008-05-15  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/tools/selectrotatetool.cpp: Added Control modifier
	to the tool to fix PR 1962903 - toggle selected primitives.

	* libavogadro/src/color.h: Cast GLFloats to ints to suppress warning.

	* libavogadro/src/CMakeLists.txt: Only add the Boost_INCLUDE_DIR if
	boost is found - fixes a CMake error with CMake 2.6.

2008-05-14  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/pythonextension.cpp: Fixed typo.

2008-05-14  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/extensions/animation*.*: Basic animation extension.

	* testfiles/spc216.*: Added pdb topology and xtc trajectory to test
	animation.

2008-05-13  Marcus D. Hanwell  <marcus@cryos.org>

	* CMakeLists.txt: Allow ENABLE_PYTHON variable to allow disabling of
	Python.

	* libavogadro/src/tools/drawtool.cpp: Fixed uninitialised variables.

2008-05-12  Marcus D. Hanwell  <marcus@cryos.org>

	* avogadro/src/mainwindow.cpp: Fixed the code to fail properly when
	the file to be opened does not exist.

2008-05-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/extensions/propmodel.cpp
	libavogadro/src/extensions/propextension.h
	libavogadro/src/extensions/propextension.cpp:
	Updates to fix some translations and to allow resizing the window
	without showing large amounts of empty space.

	* Many files: Fix a pile of Krazy warnings.

	* avogadro/src/mainwindow.cpp: Implement save to a new file, then
	a rename. (If others have ways to improve this, please let me know.)

2008-05-11  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Fix uninitialised undoStack pointer.

2008-05-10  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/tools/aligntool.cpp: Fixed for case where the
	molecule was already alined to the chosen axis.

2008-05-09  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* CMakeLists.txt: Install our fragments. Destination may need